# doc-gen-assignment-palindrome

./: DECISIONS.md  pyproject.toml
config/: template_config.json
data/client_01_clean/: fde_notes.md  meeting_notes.docx  platform_market_update.docx  report_request.docx
data/client_02_medium/: fde_notes.md  meeting_notes.docx  platform_market_update.docx  report_request.docx
data/client_03_hard/: fde_notes.md  meeting_notes.docx  platform_market_update.docx  portfolio_pack.docx  report_request.docx
data/client_04_stretch/: fde_notes.md  meeting_notes.docx  platform_market_update.docx  portfolio_pack.docx  report_request.docx
evals/: checks.py  evaluate.py  judge.py  oracle.py
outputs/: client_01_clean.md  client_02_medium.md  client_03_hard.md  client_04_stretch.md
src/agent_pipeline/: compute.py  facts.py  generate.py  llm.py  rendering.py  sources.py
