[project]
name = "doc-gen-assignment"
version = "0.1.0"
description = "Document-generation take-home: turn client source material into a finished advice report via a config-driven pipeline."
requires-python = ">=3.10"
dependencies = [
    "openai>=1.40",
    "python-docx>=1.1",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
# You are free to add whatever you like (e.g. pydantic-ai, pytest). These are only what the
# starting scaffold needs to run.
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_pipeline", "src/document_formatter"]

[tool.ruff]
src = ["src"]

[tool.pytest.ini_options]
# evals/ lives at the repo root (it is the deliverable eval, not a src package),
# so add the root to the path for imports during tests.
pythonpath = ["."]
testpaths = ["tests"]
